Fix invalid z-index value.

--- a/static/css/mixxx.css
+++ b/static/css/mixxx.css
@@ -11,7 +11,7 @@ body
     position: relative;
     margin-left: auto;
     margin-right: auto;
-    z-index: 0px;
+    z-index: 0;
 }
 .oldwrappershadow {
     -moz-box-shadow: 0px 15px 15px #444444; /* FF3.5+ */
